codex-rs/tui/src/status/snapshots/codex_tui__status__account_pool_status_tests__status_snapshot_shows_chatgpt_pool_active_member.snap
---
source: tui/src/status/account_pool__status_tests.rs
expression: sanitized
---
/status

  >_ OpenAI Codex (v0.0.0)

  Visit https://chatgpt.com/codex/settings/usage for up-to-date
  information on rate limits and credits

  Model:           gpt-5.1-codex-max (reasoning none, summaries auto)
  Directory:       [[workspace]]
  Permissions:     Custom (custom permissions with network access, Ask for approval)
  Agents.md:       <none>
  Account:         codex-pro pool (2 members, 0 unavailable)
                   active: work-pro / work@example.com / Pro

  Context window:  100% left (750 used / 272K)
  Limits:          data not available yet
